# libswid

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  codecov.yml  sonar-project.properties
cmake/: FindPackageHandleStandardArgs.cmake  FindPackageMessage.cmake  FindTinyXML.cmake  FindXercesC.cmake  SelectLibraryConfigurations.cmake
docs/: Makefile  conf.py  developer.rst  index.rst  user.rst
docs/doxygen/: Doxyfile
docs/examples/: report_creator_entity.c  report_creator_entity.cpp  report_creator_entity.py
resources/samples/: README
resources/samples/Accelerator/: Enterprise_Vault_Compliance_Accelerator_Client.swidtag  Enterprise_Vault_Compliance_Accelerator_Server.swidtag  Enterprise_Vault_Discovery_Accelerator_Client.swidtag  Enterprise_Vault_Discovery_Accelerator_Server.swidtag
resources/samples/MAC/: Enterprise_Vault.swidtag  Enterprise_Vault_Client_for_Mac_OS_X.swidtag
resources/samples/Vault/: Enterprise_Vault.swidtag  Enterprise_Vault_API_Runtime.swidtag  Enterprise_Vault_Deployment_Scanner.swidtag  Enterprise_Vault_File_System_Archiving_x64.swidtag  Enterprise_Vault_OWA_2010_Extensions.swidtag  Enterprise_Vault_Outlook_Add-in.swidtag  Enterprise_Vault_Server.swidtag  Enterprise_Vault_Software_Development_Kit.swidtag
resources/samples/VaultCloudAdapter/: Enterprise_Vault_Cloud_Adapter.swidtag
resources/utilities/: put_copyright.sh  run-astyle.sh
src/: SWIDStruct.cpp  SWIDStruct.h  Translator.cpp  Translator.h  lib.cpp  lib.h  libswid  libswid-base.cpp  libswid-base.h  libswid.c  libswid.cpp  libswid.h  loader-generic-notemplate.cpp  loader-generic.cpp  loader-generic.h  loader-tinyxml.cpp  loader-tinyxml.h  loader-xerces.cpp  loader-xerces.h  main.cpp  swid-common.h
src/include/: libswid
src/swig/: CMakeLists.txt  __init__.py.in  setup.py.in  swid.i  swid_api.i
test/: CMakeLists.txt
test/integration/: resave.sh  resaver.cpp  test-examples.sh
test/unit/: test.c  test.cpp  test.py
